--- a/app/views/applicants/registrations/edit.html.erb
+++ b/app/views/applicants/registrations/edit.html.erb
@@ -11,14 +11,13 @@
 
       <div class="form-group">
 
+        <b>Email:</b> <%= current_applicant.email %><br />
+
         <%= f.label :first_name, '* First Name' %>
         <%= f.text_field :first_name, :class => "form-control", :placeholder => "George" %>
 
         <%= f.label :last_name, '* Last Name' %>
         <%= f.text_field :last_name, :class => "form-control", :placeholer => "Washington" %>
-
-        <%= f.label :email, '* Email' %>
-        <%= f.email_field :email, :class => "form-control", :placeholder => 'george@whitehouse.gov' %>
 
         <%= f.label :phone, '* Phone' %>
         <%= f.text_field :phone, :class => "form-control", :placeholder => '555-555-5555' %>
