--- a/app/views/applicants/registrations/edit.html.erb
+++ b/app/views/applicants/registrations/edit.html.erb
@@ -11,7 +11,7 @@
 
       <div class="form-group">
 
-        <b>Email:</b> <%= current_applicant.email %><br />
+        <strong>Email:</strong> <%= current_applicant.email %><br />
 
         <%= f.label :first_name, '* First Name' %>
         <%= f.text_field :first_name, :class => "form-control", :placeholder => "George" %>
