--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -22,10 +22,10 @@
             %li{class: params[:controller] == 'applicants/registrations' && params[:action] !=  'status' ? 'active' : ''}
               - if applicant_signed_in?
                 =link_to "Profile", edit_applicant_registration_path, :class => 'active' unless current_applicant.submitted_at
-  
+
               - elsif started? && !expired?
                 =link_to "Apply Now", new_applicant_registration_url, :class => 'active'
- 
+
             - if started? && !expired?
               - if params[:controller] == 'applicants/academic_records'
                 %li.active
@@ -35,8 +35,8 @@
                 %li
                   - if applicant_signed_in?
                     =link_to "Academic Records", applicants_records_url, :class => 'active' unless current_applicant.submitted_at
-  
-  
+
+
             - if params[:controller] == 'applicants/recommenders'
               %li.active
                 - if applicant_signed_in?
@@ -45,7 +45,7 @@
               %li
                 - if applicant_signed_in?
                   =link_to "Recommendation", applicants_recommenders_url, :class => 'active'
-  
+
             - if params[:controller] == 'applicants/registrations' && params[:action] ==  'status'
               %li.active
                 - if applicant_signed_in?
@@ -54,7 +54,7 @@
               %li
                 - if applicant_signed_in?
                   =link_to "Status", applicant_status_url, :class => 'active'
-  
+
             - if params[:controller] == 'applicants/sessions'
               %li.active
                 - if applicant_signed_in? || user_signed_in? #|| user_signed_in?
@@ -67,8 +67,8 @@
                   = user_signed_in? ? link_to("Logout", destroy_user_session_path, :method => :delete) : link_to("Logout", destroy_applicant_session_path, :method => :delete)
                 - else
                   = link_to "Login", main_app.new_applicant_session_url, :class => 'active'
-            =content_tag :li, link_to('Admin', rails_admin_path)
- 
+            =content_tag :li, link_to('Admin', program_dashboard_path)
+
     - else
       %div{ :class => "collapse navbar-collapse", :id => "bs-example-navbar-collapse-1" }
         %ul.nav.navbar-nav.navbar-right
