--- a/app/views/layouts/admin.haml
+++ b/app/views/layouts/admin.haml
@@ -1,5 +1,16 @@
 !!!
 %html
   %head
+    = csrf_meta_tags
+    = javascript_pack_tag 'program_admin'
+    = stylesheet_pack_tag 'program_admin'
   %body
-    = yeild
+    .d-flex.flex-column.flex-md-row.align-items-center.p-3.px-md-4.mb-3.bg-white.border-bottom.shadow-sm
+      %h3.my-0.mr-md-auto.font-weight-normal #{current_grant.program_title} | REU Manager
+      %nav.my-2.my-md-0.mr-md-3
+        %a.p-2.text-dark(href="#") Settings
+        %a.p-2.text-dark(href="#") Snippets
+        %a.p-2.text-dark(href="#") Application Form
+        %a.p-2.text-dark(href="#") Applicants
+      %a.btn.btn-outline-primary(href="#") Logout
+    = yield
