form and js fixes

--- a/app/views/reu_program/application_forms/edit.haml
+++ b/app/views/reu_program/application_forms/edit.haml
@@ -1,9 +1,7 @@
-= simple_form_for [:reu_program, @form] do |f|
-  = f.input :name
-  = f.nested_fields_for :sections do |sf|
-    = sf.input :title
-    = sf.input :repeating
-    = sf.nested_fields_for :questions do |qf|
-      %p Question
-  = f.add_nested_fields_link :sections
-  = f.submit 'Save Form', class: 'btn btn-primary'
+.row
+  .col-2
+  .col-8.edit-application-form-container
+    = render partial: 'edit_form'
+  .col-2
+
+
