--- a/app/views/reu_program/snippets/_edit_form.haml
+++ b/app/views/reu_program/snippets/_edit_form.haml
@@ -1,28 +1,26 @@
-%h2 Edit Snippet
-= simple_form_for [:reu_program, @snippet] do |f|
-  = f.input :name
-  %hr
-  = f.input :description
-  %hr
-  = f.input :value
-  %hr
-  = f.submit 'Save Snippet', class: 'btn btn-primary'
+//saved because we were proud of our ajax discovery
+
+// %h2 Edit Snippet
+// = simple_form_for [:reu_program, @snippet] do |f|
+//   = f.input :value
+//   %hr
+//   = f.submit 'Save Snippet', class: 'btn btn-primary'
   
-:javascript
-  function updateForm(e) {
-      var data = new FormData(document.querySelector('.edit_snippet'))
-      $('.edit_snippet :input, .edit_snippet select').prop('readonly', true)
-      $.ajax({
-        url: '#{update_attributes_reu_program_snippet_path(@snippet)}',
-        method: 'patch',
-        data: data,
-        processData: false,
-        contentType: false,
-        success: function(res) {
-          $('.edit-snippet-container').html(res)
-        },
-        fail: function(err) {
-          alert('failed to update form')
-        }
-      })
-  }
+// :javascript
+//   function updateForm(e) {
+//       var data = new FormData(document.querySelector('.edit_snippet'))
+//       $('.edit_snippet :input, .edit_snippet select').prop('readonly', true)
+//       $.ajax({
+//         url: '#{update_attributes_reu_program_snippet_path(@snippet)}',
+//         method: 'patch',
+//         data: data,
+//         processData: false,
+//         contentType: false,
+//         success: function(res) {
+//           $('.edit-snippet-container').html(res)
+//         },
+//         fail: function(err) {
+//           alert('failed to update form')
+//         }
+//       })
+//   }
