--- a/app/views/reu_program/snippets/edit.haml
+++ b/app/views/reu_program/snippets/edit.haml
@@ -1,5 +1,5 @@
-.row
-  .col-2
-  .col-8.edit-snippet-container
-    = render partial: 'edit_form'
-  .col-2
+%h2 Edit Snippet
+= simple_form_for [:reu_program, @snippet] do |f|
+  = f.input :value
+  %hr
+  = f.submit 'Save Snippet', class: 'btn btn-primary'
