small fixes update seeds

--- a/app/views/reu_program/sections/edit.haml
+++ b/app/views/reu_program/sections/edit.haml
@@ -1,6 +1,11 @@
 .row
-  .col-2
-  .col-8.edit-application-form-container
-    %h2 Edit Section for #{@form.name} Form
+  .col-1
+  .col-10.edit-application-form-container
+    .row
+      .col
+        %h2 Edit Section for #{@form.name} Form
+      .col
+        = link_to 'Back to Form', edit_reu_program_application_form_path(@form), class: 'btn btn-secondary float-right'
+    %hr
     = render partial: 'form'
-  .col-2
+  .col-1
