--- a/app/views/reu_program/sections/_form.haml
+++ b/app/views/reu_program/sections/_form.haml
@@ -1,24 +1,35 @@
-= simple_form_for [:reu_program, @form, @section], html: { class: 'section_form' } do |f|
-  .row
-    .col
-      = f.input :title, as: :string
-    .col
-      = f.input :repeating
-  - unless f.object.new_record?
-    = f.nested_fields_for :questions do |qf|
-      = qf.input_field :order, as: :hidden
-      - if qf.object.is_a?(Questions::ShortText)
-        = render partial: 'reu_program/questions/short_text', locals: { f: qf }
-      - if qf.object.is_a?(Questions::LongText)
-        = render partial: 'reu_program/questions/long_text', locals: { f: qf }
-      - if qf.object.is_a?(Questions::Boolean)
-        = render partial: 'reu_program/questions/boolean', locals: { f: qf }
-      - if qf.object.is_a?(Questions::Select)
-        = render partial: 'reu_program/questions/select', locals: { f: qf }
-    %hr
-    = f.input :add_question, collection: Question::TYPES, input_html: { data: { target: 'addQuestion' } }
-  %hr
-  = f.submit 'Save Section', class: 'btn btn-primary'
+.row
+  .col-4
+    %h5 Section Outline
+    %strong Questions
+    %ul.list-group
+      - @section.questions.each do |question|
+        %li.list-group-item
+          %p= "#{question.order}. #{question.title || question.default_name}"
+
+  .col-8
+    = simple_form_for [:reu_program, @form, @section], html: { class: 'section_form' } do |f|
+      .row
+        .col
+          = f.input :title, as: :string
+        .col
+          = f.input :repeating
+      %hr
+      - unless f.object.new_record?
+        = f.nested_fields_for :questions do |qf|
+          = qf.input_field :order, as: :hidden
+          - if qf.object.is_a?(Questions::ShortText)
+            = render partial: 'reu_program/questions/short_text', locals: { f: qf }
+          - if qf.object.is_a?(Questions::LongText)
+            = render partial: 'reu_program/questions/long_text', locals: { f: qf }
+          - if qf.object.is_a?(Questions::Boolean)
+            = render partial: 'reu_program/questions/boolean', locals: { f: qf }
+          - if qf.object.is_a?(Questions::Select)
+            = render partial: 'reu_program/questions/select', locals: { f: qf }
+          %hr
+        = f.input :add_question, collection: Question::TYPES, input_html: { data: { target: 'addQuestion' } }
+      %hr
+      = f.submit 'Save Section', class: 'btn btn-primary'
 
 - unless @section.new_record?
   :javascript
