edited both settings index and edit haml views and settings controller to mirror snippets files

--- a/app/views/reu_program/settings/edit.haml
+++ b/app/views/reu_program/settings/edit.haml
@@ -1,7 +1,21 @@
-%h2 Edit Setting
-= simple_form_for [:reu_program, @setting] do |f|
-  = f.input :value
-  %hr
-  = f.submit 'Save Setting', class: 'btn btn-primary'
-  
+.row
+  .col-2
+  .col-8
+    %h2 Edit Setting
+    = simple_form_for [:reu_program, @setting] do |f|
+      .row
+        .col
+          %p
+            %strong Name:
+            = f.object.name
+      .row
+        .col
+          %p
+            %strong Description:
+            = f.object.description
+      = f.input :value
+      %hr
+      = f.submit 'Save Setting', class: 'btn btn-primary'
+  .col-2
+ 
   
