--- a/app/views/reu_program/fields/_date.haml
+++ b/app/views/reu_program/fields/_date.haml
@@ -1,4 +1,4 @@
-%strong Long Text Question
+%strong Date Field
 .row
   .col
     = f.input :title, as: :string
@@ -7,6 +7,3 @@
 .row
   .col
     = f.input :description, as: :text, hint: f.object.description_hint
-.row
-  .col
-    = f.input :min_length, as: :integer, hint: f.object.min_length_hint
