--- a/app/views/reu_program/fields/_long_text.haml
+++ b/app/views/reu_program/fields/_long_text.haml
@@ -1,4 +1,4 @@
-%strong Checkbox Question
+%strong Long Text Field
 .row
   .col
     = f.input :title, as: :string
@@ -7,3 +7,6 @@
 .row
   .col
     = f.input :description, as: :text, hint: f.object.description_hint
+.row
+  .col
+    = f.input :min_length, as: :integer, hint: f.object.min_length_hint
