get application form building json and allow deleting of sections and fields

--- a/app/views/reu_program/fields/_boolean.haml
+++ b/app/views/reu_program/fields/_boolean.haml
@@ -1,4 +1,8 @@
-%strong Checkbox Field
+.row
+  .col
+    %strong Checkbox Field
+  .col
+    = render partial: 'reu_program/fields/delete_button', locals: { f: f }
 .row
   .col
     = f.input :title, as: :string
