--- a/app/views/reu_program/application_forms/edit.haml
+++ b/app/views/reu_program/application_forms/edit.haml
@@ -1,5 +1,15 @@
 .row
   .col-2
+  .col-8
+    .row
+      .col
+        %h2 Edit Application Form
+      .col
+        .btn-group.float-right
+          = link_to 'Show Schema', show_schema_reu_program_application_form_path(@form), class: 'btn btn-light'
+  .col-2
+.row
+  .col-2
   .col-8.edit-application-form-container
     = render partial: 'edit_form'
   .col-2
