--- a/app/views/reu_program/fields/_short_text.haml
+++ b/app/views/reu_program/fields/_short_text.haml
@@ -1,4 +1,8 @@
-%strong Short Text Field
+.row
+  .col
+    %strong Short Text Field
+  .col
+    = render partial: 'reu_program/fields/delete_button', locals: { f: f }
 .row
   .col
     = f.input :title, as: :string
