--- a/app/views/reu_program/applicants/index.haml
+++ b/app/views/reu_program/applicants/index.haml
@@ -1,7 +1,8 @@
 .row
   .col-2
   .col-8
-    %h2 Applicants
+    %h2.float-left Applicants
+    %button.float-right= link_to 'Export All as CSV', reu_program_applicants_path(format: 'csv')
   .col-2
 .row
   .col-2
@@ -19,5 +20,5 @@
             %td= applicant.state
             %td.actions
               = link_to 'PDF', edit_reu_program_applicant_path(applicant) |
-              = link_to 'Export CSV', reu_program_applicant_path(applicant, format: 'csv')
+              %button= link_to 'Export CSV', reu_program_applicant_path(applicant, format: 'csv')
     .col-2
