--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -3,7 +3,7 @@
     .col-md-12
       %h3 General Info
     .col-md-5
-      = image_tag('REU2016.jpg', class: 'pull-left img-responsive center-block')
+      -# = image_tag('REU2016.jpg', class: 'pull-left img-responsive center-block')
     .col-md-7
       = raw Snippet[:general_description]
     .col-md-12
@@ -12,7 +12,7 @@
           The deadline for applications has passed. Please sign in to see existing application status.
       - elsif started?
         %h3.deadline
-          Application Deadline #{Setting[:application_deadline].to_date.strftime("%A, %b %d") if Setting[:application_deadline]}
+          Application Deadline #{Setting[:application_deadline]&.to_date&.strftime("%A, %b %d") || 'Missing'}
         .app_button
           - if applicant_signed_in? && current_applicant.state == 'submitted'
             = link_to "Check Status", applicant_status_url, :class => "btn btn-lg btn-success"
@@ -23,9 +23,6 @@
       - else
         %h3.deadline
           Applications will be available in #{Setting[:application_start]&.to_date&.strftime("%A, %b %d")} for the Summer 2017 Program. Applications will be due on #{Setting[:application_deadline]&.to_date&.strftime("%A, %b %d")} and Decisions sent to applicants by #{Setting[:notification_date]&.to_date&.strftime("%A, %b, %d")}.
-      
-
-
   .col-md-12
     %section.col-md-4
       %h3 Program Highlights
