--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,79 +1,31 @@
-%nav{ :class => "navbar navbar-default yamm navbar-static-top", :role => "navigation",  :id => "header" }
+%nav.navbar.navbar-default.yamm.navbar-static-top#header{ role: "navigation" }
   %div.container
     %div.navbar-header
-      %button{ :type => "button", :class => "navbar-toggle",  :data_toggle => "collapse", :data_target => "#bs-example-navbar-collapse-1" }
+      %button.navbar-toggle(type="button" data_toggle="collapse" data_target="#bs-example-navbar-collapse-1")
         %span.sr-only
           Toggle navigation
           %i.fa.fa-bars
-
-      = link_to "#{Setting[:university]&.titleize}".html_safe, root_path, class: 'navbar-brand', id: 'ar-brand'
-    - if settings_filled_in?
-      %div{ :class => "collapse navbar-collapse", :id => "bs-example-navbar-collapse-1" }
+      .collapse.navbar-collapse#bs-example-navbar-collapse-1
         %ul.nav.navbar-nav.navbar-right
-          - if params[:controller] == 'welcome'
-            %li.active
-              =link_to "Welcome", root_path, :class => 'active'
+          %li{ class: '' }
+            = link_to "#{Setting[:university]&.titleize || 'University Name'}".html_safe, root_path, class: 'navbar-brand', id: 'ar-brand'
+          %li{ class: params[:controller] == 'welcome' ? 'active' : '' }
+            =link_to "Welcome", root_path
+          - if applicant_signed_in?
+            %li{ class: '' }
+              = link_to 'Application', application_path
+            %li{ class: ''}
+              = link_to 'Recommenders', recommenders_path
+            %li{ class: ''}
+              = link_to 'Status', status_path
+            %li{ class: ''}
+              = link_to "Logout", destroy_applicant_session_path, method: :delete
           - else
-            %li
-              =link_to "Welcome", root_path
-          - if !request.original_url.match('/info')
-            %li
-              = link_to 'Current Projects', "http://ecm.ucsd.edu/REU.html"
-            %li{class: params[:controller] == 'applicants/registrations' && params[:action] !=  'status' ? 'active' : ''}
-              - if applicant_signed_in?
-                =link_to "Profile", edit_applicant_registration_path, :class => 'active' unless current_applicant.submitted_at
-
-              - elsif started? && !expired?
-                =link_to "Apply Now", new_applicant_registration_url, :class => 'active'
-
             - if started? && !expired?
-              - if params[:controller] == 'applicants/academic_records'
-                %li.active
-                  - if applicant_signed_in?
-                    =link_to "Academic Records", applicants_records_url, :class => 'active' unless current_applicant.submitted_at
-              - else
-                %li
-                  - if applicant_signed_in?
-                    =link_to "Academic Records", applicants_records_url, :class => 'active' unless current_applicant.submitted_at
+              %li{ class: ''}
+                = link_to "Apply Now", new_applicant_registration_url
+              %li{ class: ''}
+                = link_to "Login", new_applicant_session_url, class: 'active'
+          %li{ class: '' }
+            = link_to 'Admin', reu_program_dashboard_path
 
-
-            - if params[:controller] == 'applicants/recommenders'
-              %li.active
-                - if applicant_signed_in?
-                  =link_to "Recommendation", applicants_recommenders_url, :class => 'active'
-            - else
-              %li
-                - if applicant_signed_in?
-                  =link_to "Recommendation", applicants_recommenders_url, :class => 'active'
-
-            - if params[:controller] == 'applicants/registrations' && params[:action] ==  'status'
-              %li.active
-                - if applicant_signed_in?
-                  =link_to "Status", applicant_status_url, :class => 'active'
-            - else
-              %li
-                - if applicant_signed_in?
-                  =link_to "Status", applicant_status_url, :class => 'active'
-
-            - if params[:controller] == 'applicants/sessions'
-              %li.active
-                - if applicant_signed_in? || user_signed_in? #|| user_signed_in?
-                  = user_signed_in? ? link_to("Logout", destroy_user_session_path, :method => :delete) : link_to("Logout", destroy_applicant_session_path, :method => :delete)
-                - else
-                  = link_to "Login", main_app.new_applicant_session_url, :class => 'active'
-            - else
-              %li
-                - if applicant_signed_in? || user_signed_in? #|| user_signed_in?
-                  = user_signed_in? ? link_to("Logout", destroy_user_session_path, :method => :delete) : link_to("Logout", destroy_applicant_session_path, :method => :delete)
-                - else
-                  = link_to "Login", main_app.new_applicant_session_url, :class => 'active'
-            =content_tag :li, link_to('Admin', reu_program_dashboard_path)
-
-    - else
-      %div{ :class => "collapse navbar-collapse", :id => "bs-example-navbar-collapse-1" }
-        %ul.nav.navbar-nav.navbar-right
-          %li
-            = link_to 'Settings', settings_path
-          - if current_user.blank?
-            %li
-              = link_to 'Login', new_user_session_path
