--- a/app/views/layouts/admin.haml
+++ b/app/views/layouts/admin.haml
@@ -11,6 +11,7 @@
         = link_to 'Settings', reu_program_settings_path, class: 'p-2 text-dark'
         = link_to 'Snippets', reu_program_snippets_path, class: 'p-2 text-dark'
         = link_to 'Application Form', reu_program_application_forms_path, class:  'p-2 text-dark'
+        = link_to 'Recommender Form', reu_program_recommender_forms_path, class:  'p-2 text-dark'
         = link_to 'Applicants', reu_program_applicants_path, class: 'p-2 text-dark'
       = link_to 'Logout', destroy_program_admin_session_path, method: :delete, class: 'btn btn-outline-primary'
     = yield
