--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,7 @@
  *= require css/style-blue3
  *= require css/width-full
  *= require cms
- *= require bootstrap-datepicker3
+ *cc= require bootstrap-datepicker3
  */
 
 
