created custom layout for super user. corrected show path on grant index view

--- a/app/views/grants/edit.html.erb
+++ b/app/views/grants/edit.html.erb
@@ -3,6 +3,6 @@
 <%= render 'form' %>
 
 
-<%= link_to 'Edit settings', edit_grant_setting_path(@grant.grant_setting) %> |
+<%= link_to 'Edit Settings', edit_grant_setting_path(@grant.grant_setting) %> |
 <%= link_to 'Show', @grant %> |
 <%= link_to 'Back', grants_path %>
