--- a/app/views/applicant_data/show_recommenders.haml
+++ b/app/views/applicant_data/show_recommenders.haml
@@ -5,7 +5,7 @@
     data: {
       schema: @form.json_schema(section: 'recommender'),
       ui: @form.ui_schema(section: 'recommender'),
-      data: JSON.generate(@applicant.recommender_info.values),
+      data: JSON.generate(@applicant&.recommender_info&.values),
       path: recommenders_path,
       method: :patch
     }
