--- a/app/views/grants/index.haml
+++ b/app/views/grants/index.haml
@@ -1,21 +1,26 @@
-%h1 Listing grants
-%table
-  %thead
-    %tr
-      %th Program title
-      %th Institution
-      %th Department
-      %th Program description
-      %th Subdomain
-      %th{colspan: "3"}
-  %tbody
-    - @grants.each do |grant|
-      %tr
-        %td= grant.program_title
-        %td= grant.institution
-        %td= grant.subdomain
-        %td= link_to 'Show', grant_path(grant)
-        %td= link_to 'Edit', edit_grant_path(grant)
-        %td= link_to 'Destroy', grant, method: :delete, data: { confirm: 'Are you sure?' }
-%br/
-= link_to 'New Grant', new_grant_path
+.row
+  .col-2
+  .col-8
+    %h2 Grants
+  .col-2
+.row
+  .col-2
+  .col-8
+    %table.table
+      %thead
+        %tr
+          %th Program Title
+          %th Subdomain
+          %th Actions
+      %tbody
+        - @grants.each do |grant|
+          %tr
+            %td= grant.program_title
+            %td= grant.subdomain
+            %td.actions
+              = link_to 'Show', grant_path(grant)
+              = link_to 'Edit', edit_grant_path(grant)
+              = link_to 'Destroy', grant, method: :delete, data: { confirm: 'Are you sure?' }
+    %br
+    = link_to 'New Grant', new_grant_path
+    .col-2
